add new website from server na

--- a/xem-phim-bo/wistoria-truong-va-kiem/index.html
+++ b/xem-phim-bo/wistoria-truong-va-kiem/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1670,18 +1670,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thuc-tinh-o-the-gioi-khac" title="Thức tỉnh ở thế giới khác">
+          <a class="list-top-movie-link" href="/phim-moi/gap-lai-tieu-dao" title="Gặp Lại Tiêu Dao">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuc-tinh-o-the-gioi-khac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gap-lai-tieu-dao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thức tỉnh ở thế giới khác
+             Gặp Lại Tiêu Dao
             </span>
             <span class="list-top-movie-item-en">
-             In Another World With My Smartphone
+             Sword and Fairy 1
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/danger-mouse-classic-collection-phan-4" title="Danger Mouse: Classic Collection (Phần 4)">
+           <span class="status">
+            HD Engsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/danger-mouse-classic-collection-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Danger Mouse: Classic Collection (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             Danger Mouse: Classic Collection (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1692,40 +1714,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xa-dam-dong-dien-loan" title="Xa Đám Đông Điên Loạn">
+          <a class="list-top-movie-link" href="/phim-moi/giac-mong-tay-du-phuc-ma-ky" title="Giấc mộng tây du: Phục ma ký">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xa-dam-dong-dien-loan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giac-mong-tay-du-phuc-ma-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xa Đám Đông Điên Loạn
+             Giấc mộng tây du: Phục ma ký
             </span>
             <span class="list-top-movie-item-en">
-             Far from the Madding Crowd
-            </span>
-            <span class="list-top-movie-item-view">
-             7 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/girls5eva-phan-3" title="Girls5eva (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/girls5eva-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Girls5eva (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Girls5eva Season 3
+             Dream Journey 4: Biography of Demon
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1736,21 +1736,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/redeem-team-doi-bong-ro-sieu-sao" title="Redeem Team: Đội bóng rổ siêu sao">
+          <a class="list-top-movie-link" href="/phim-moi/kimmy-bat-bai-phan-3" title="Kimmy bất bại (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/redeem-team-doi-bong-ro-sieu-sao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kimmy-bat-bai-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Redeem Team: Đội bóng rổ siêu sao
+             Kimmy bất bại (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             The Redeem Team
+             Unbreakable Kimmy Schmidt (Season 3)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1758,21 +1758,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ga-chan-de" title="Gã Chăn Dê">
+          <a class="list-top-movie-link" href="/phim-moi/na-shan-na-ren-na-gou" title="Na shan na ren na gou">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ga-chan-de-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/na-shan-na-ren-na-gou-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gã Chăn Dê
+             Na shan na ren na gou
             </span>
             <span class="list-top-movie-item-en">
-             Goats
+             Na shan na ren na gou
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
