add new website from server na

--- a/xem-phim-bo/thuong-lan-quyet/index.html
+++ b/xem-phim-bo/thuong-lan-quyet/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1695,18 +1695,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-nguyet-dong-thoai" title="Tinh Nguyệt Đồng Thoại">
+          <a class="list-top-movie-link" href="/phim-moi/thu-mo-nhan-long-quan-hai-hon-hau" title="Thủ Mộ Nhân: Long Quan Hải Hôn Hầu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-nguyet-dong-thoai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-mo-nhan-long-quan-hai-hon-hau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tinh Nguyệt Đồng Thoại
+             Thủ Mộ Nhân: Long Quan Hải Hôn Hầu
             </span>
             <span class="list-top-movie-item-en">
-             Moonlight Express
+             Tormenting Love Story: Hidden Love
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1717,18 +1717,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-hoa-minamata" title="Thảm Họa Minamata">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-ngay-xua-cu" title="Những Ngày Xưa Cũ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-hoa-minamata-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ngay-xua-cu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thảm Họa Minamata
+             Những Ngày Xưa Cũ
             </span>
             <span class="list-top-movie-item-en">
-             Minamata
+             Những Ngày Xưa Cũ
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1739,40 +1739,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-giao-lam-chieu" title="Cô giáo lắm chiêu">
+          <a class="list-top-movie-link" href="/phim-moi/khong-gian-cat-giu-linh-hon" title="Không gian cất giữ linh hồn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-giao-lam-chieu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-gian-cat-giu-linh-hon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô giáo lắm chiêu
+             Không gian cất giữ linh hồn
             </span>
             <span class="list-top-movie-item-en">
-             Bad Teacher
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-maigret-2-nguoi-da-khuat" title="Thám Tử Maigret 2- Người Đã Khuất">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-maigret-2-nguoi-da-khuat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thám Tử Maigret 2- Người Đã Khuất
-            </span>
-            <span class="list-top-movie-item-en">
-             Maigret's Dead Man
+             Space of Love
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1783,18 +1761,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phi-vu-bat-kha-thi" title="Phi Vụ Bất Khả Thi">
+          <a class="list-top-movie-link" href="/phim-moi/tham-kich" title="Thảm kịch">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-bat-kha-thi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-kich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phi Vụ Bất Khả Thi
+             Thảm kịch
             </span>
             <span class="list-top-movie-item-en">
-             Crush the Skull
+             22 July
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/to-tung-phan-4" title="Tố Tụng (Phần 4)">
+           <span class="status">
+            HD 720p Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-tung-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tố Tụng (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             Suits (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
