add new website from server na

--- a/xem-phim-bo/toi-tu-bo-tu-cach-la-mot-anh-hung/index.html
+++ b/xem-phim-bo/toi-tu-bo-tu-cach-la-mot-anh-hung/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1669,18 +1669,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phuong-hoang-lua" title="Phượng Hoàng Lửa">
+          <a class="list-top-movie-link" href="/phim-moi/co-dau-chay-tron-2017" title="Cô dâu chạy trốn 2017">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phuong-hoang-lua-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-dau-chay-tron-2017-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phượng Hoàng Lửa
+             Cô dâu chạy trốn 2017
             </span>
             <span class="list-top-movie-item-en">
-             Frank Phoenix
+             Runaway Bride
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/co-gai-may-man-nhat" title="Cô gái may mắn nhất">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-gai-may-man-nhat-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cô gái may mắn nhất
+            </span>
+            <span class="list-top-movie-item-en">
+             Luckiest Girl Alive
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/star-trek-first-contact" title="Star Trek- First Contact">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-first-contact-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Star Trek- First Contact
+            </span>
+            <span class="list-top-movie-item-en">
+             Star Trek: Lần Đầu Gặp Mặt
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1691,21 +1735,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thang-nam-ruc-ro-3" title="Tháng năm rực rỡ">
+          <a class="list-top-movie-link" href="/phim-moi/gau-pooh-mau-va-mat-2" title="Gấu Pooh: Máu và Mật 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thang-nam-ruc-ro-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gau-pooh-mau-va-mat-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tháng năm rực rỡ
+             Gấu Pooh: Máu và Mật 2
             </span>
             <span class="list-top-movie-item-en">
-             Go-Go Sisters
+             Winnie-the-Pooh: Blood and Honey 2
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1713,65 +1757,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/heo-peppa-phan-6" title="Heo Peppa (Phần 6)">
+          <a class="list-top-movie-link" href="/phim-moi/chiec-thuyen-am-nhac" title="Chiếc Thuyền Âm Nhạc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/heo-peppa-phan-6-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chiec-thuyen-am-nhac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Heo Peppa (Phần 6)
+             Chiếc Thuyền Âm Nhạc
             </span>
             <span class="list-top-movie-item-en">
-             Peppa Pig (Season 6)
+             The Boat That Rocked
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lau-dai-giang-sinh" title="Lâu đài Giáng sinh">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lau-dai-giang-sinh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lâu đài Giáng sinh
-            </span>
-            <span class="list-top-movie-item-en">
-             A Castle For Christmas
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tu-so-khong" title="Từ số không">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tu-so-khong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Từ số không
-            </span>
-            <span class="list-top-movie-item-en">
-             From Scratch
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
