add new website from server na

--- a/xem-phim-bo/tham-tu-lung-danh-conan/index.html
+++ b/xem-phim-bo/tham-tu-lung-danh-conan/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             30
+             31
             </dd>
             <br/>
            </dl>
@@ -1667,21 +1667,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-ba-noi-tro-kieu-my-phan-7" title="Những Bà Nội Trợ Kiểu Mỹ (Phần 7)">
+          <a class="list-top-movie-link" href="/phim-moi/hosto" title="Hosto">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ba-noi-tro-kieu-my-phan-7-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hosto-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Bà Nội Trợ Kiểu Mỹ (Phần 7)
+             Hosto
             </span>
             <span class="list-top-movie-item-en">
-             Desperate Housewives (Season 7)
+             Hosto
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1689,18 +1689,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vua-truyen-hinh" title="Vua Truyền Hình">
+          <a class="list-top-movie-link" href="/phim-moi/cong-thuc-tinh-yeu" title="Công Thức Tình Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-truyen-hinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/askin-tarifi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vua Truyền Hình
+             Công Thức Tình Yêu
             </span>
             <span class="list-top-movie-item-en">
-             The King of Comedy
+             Recipe of Love / Askin Tarifi
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/classico" title="Classico">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/classico-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Classico
+            </span>
+            <span class="list-top-movie-item-en">
+             Classico
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1711,21 +1733,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-quai-sieu-cap-giai-cuu-giang-sinh" title="Hội Quái Siêu Cấp: Giải cứu Giáng Sinh">
+          <a class="list-top-movie-link" href="/phim-moi/borders-of-love" title="Borders of Love">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-quai-sieu-cap-giai-cuu-giang-sinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/borders-of-love-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hội Quái Siêu Cấp: Giải cứu Giáng Sinh
+             Borders of Love
             </span>
             <span class="list-top-movie-item-en">
-             Super Monsters Save Christmas
+             Borders of Love
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1733,43 +1755,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thoi-gian-luong-than-my-canh" title="Thời Gian Lương Thần Mỹ Cảnh">
+          <a class="list-top-movie-link" href="/phim-moi/to-tung-phan-9" title="Tố tụng (Phần 9)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thoi-gian-luong-than-my-canh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-tung-phan-9-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thời Gian Lương Thần Mỹ Cảnh
+             Tố tụng (Phần 9)
             </span>
             <span class="list-top-movie-item-en">
-             Love Scenery
+             Suits (Season 9)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ong-chong-quoc-dan-2" title="Ông Chồng Quốc Dân 2">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-chong-quoc-dan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ông Chồng Quốc Dân 2
-            </span>
-            <span class="list-top-movie-item-en">
-             Pretty Man 2
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
